--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,21 @@
 blessed==1.15.0
+cachetools==4.2.2
+certifi==2020.12.5
+chardet==4.0.0
+google-auth==1.30.0
+idna==2.10
+kubernetes==17.17.0
+oauthlib==3.1.0
 puzpy==0.2.4
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+python-dateutil==2.8.1
+PyYAML==5.4.1
+requests==2.25.1
+requests-oauthlib==1.3.0
+rsa==4.7.2
+six==1.16.0
+-e git+https://github.com/thisisparker/cursewords.git@278d39b8ce2bf8ecf641c59e9a6eab62ace805f9#egg=tilt_dev_python_client&subdirectory=cursewords/tilt/gen
+urllib3==1.26.4
+wcwidth==0.2.5
+websocket-client==0.59.0
