--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ requests==2.25.1
 requests-oauthlib==1.3.0
 rsa==4.7.2
 six==1.16.0
-# -e git+https://github.com/thisisparker/cursewords.git@0ca4e28ca429a4fdaaeca8ffb3903140497dc925#egg=tilt_dev_python_client&subdirectory=cursewords/tilt/gen
+-e git+https://github.com/tilt-dev/tiltwords.git@6fba3c80a81c2ea7e431055f05216034b7e7f1cb#egg=tilt_dev_python_client&subdirectory=cursewords/tilt/gen
 urllib3==1.26.4
 wcwidth==0.2.5
 websocket-client==0.59.0
